tooling/nargo_cli/tests/snapshots/compile_failure/trait_incorrect_generic_count/execute__tests__trait_incorrect_generic_count_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Unused expression result of type u32
  ┌─ src/main.nr:3:5
  │
3 │     x.trait_fn();
  │     ------------
  │

warning: unused variable x
  ┌─ src/main.nr:7:20
  │
7 │     fn trait_fn<T>(x: T) -> T {}
  │                    - unused variable
  │

error: expected type T, found type ()
  ┌─ src/main.nr:7:8
  │
7 │     fn trait_fn<T>(x: T) -> T {}
  │        --------             - expected T because of return type
  │        │                     
  │        () returned here
  │
  = implicitly returns `()` as its body has no tail or `return` expression

error: trait_fn expects 1 generic but 2 were given
   ┌─ src/main.nr:11:8
   │
11 │     fn trait_fn<A, B>(x: A) -> A { x }
   │        --------
   │

Aborting due to 2 previous errors
